--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iniciar Sesión</title>
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/estilos2.css">
   <script defer src="js/scripts.js"></script>
 </head>
 <body>
